# optparse-applicative-reader

./: LICENSE  README.md  optparse-applicative-reader.cabal
app/: Main.hs
src/Options/Applicative/Builder/: Reader.hs
src/Options/Applicative/Builder/Reader/: Internal.hs
test/Options/Applicative/Builder/: ReaderSpec.hs
test/Options/Applicative/Builder/Reader/: InternalSpec.hs
